tests/baselines/reference/computedPropertyNames26_ES5.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNames26_ES5.ts(8,12): error TS2660: 'super' can only be referenced in members of derived classes or object literal expressions.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNames26_ES5.ts (1 errors) ====
    class Base {
        bar() {
            return 0;
        }
    }
    class C extends Base {
        [
            { [super.bar()]: 1 }[0]
               ~~~~~
!!! error TS2660: 'super' can only be referenced in members of derived classes or object literal expressions.
        ]() { }
    }